[package]
name = "ballistic-kf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "0.17.1", features = [ "simd-stable" ] }
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
linearkalman = "0.1.3"
rulinalg = "0.4.2"